almost done with frontend?

--- a/app/mousepad.html
+++ b/app/mousepad.html
@@ -190,17 +190,17 @@
                     </div>
                     <small class="pt-1">(50 Reviews)</small>
                 </div>
-                <h3 class="font-weight-semi-bold mb-4">13.00€</h3>
+                <h3 class="font-weight-semi-bold mb-4">10.00€</h3>
                 <div class="d-flex mb-4">
-                    <p class="text-dark font-weight-medium mb-0 mr-3">Colors:</p>
+                    <p class="text-dark font-weight-medium mb-0 mr-3">Size:</p>
                     <form>
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="color-4" name="color">
-                            <label class="custom-control-label" for="color-4">Blue</label>
+                            <input type="radio" class="custom-control-input" id="size-1" name="size">
+                            <label class="custom-control-label" for="size-1">60x30 cm </label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="color-5" name="color">
-                            <label class="custom-control-label" for="color-5">Green</label>
+                            <input type="radio" class="custom-control-input" id="size-2" name="size">
+                            <label class="custom-control-label" for="size-2">25x20 cm </label>
                         </div>
                         
                     </form>
@@ -233,7 +233,7 @@
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="tab-pane-1">
                         <h4 class="mb-3">Product Description</h4>
-                        <p>Mousepad com dimensoes 25x20 cm perfeito para usar com um rato.</p>
+                        <p>Mousepad com dimensoes 25x20 cm ou de 80x30cm perfeito para usar com um rato.</p>
                     </div>
 
                     <div class="tab-pane fade" id="tab-pane-3">
@@ -305,12 +305,12 @@
                 <div class="owl-carousel related-carousel">
                     <div class="card product-item border-0">
                         <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                            <img class="img-fluid w-100" src="img/mousepad.png" alt="">
+                            <img class="img-fluid w-100" src="img/caneca.png" alt="">
                         </div>
                         <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                            <h6 class="text-truncate mb-3">Mousepad DETI</h6>
+                            <h6 class="text-truncate mb-3">Caneca DETI</h6>
                             <div class="d-flex justify-content-center">
-                                <h6>10.00€</h6>
+                                <h6>13.00€</h6>
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-between bg-light border">
